objects/Solution_Migration__c/Solution_Migration__c.object-meta.xml
<CustomObject>
    <description>Solution Migration</description>
    <label>Solution Migration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>