objects/Solution_Migration__c/fields/AEM_Solution__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>AEM Solution (lookup to product)</description>
    <label>AEM Solution</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Solution Migrations</relationshipLabel>
    <relationshipName>Solution_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>