objects/Solution_Migration__c/fields/AEM_Solution_List_Price__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution_List_Price__c</fullName>
    <description>AEM Solution List Price</description>
    <label>AEM Solution List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>