objects/Solution_Migration__c/fields/AEM_Solution_Net_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution_Net_Total_Price__c</fullName>
    <formula>AEM_Solution_Net_Unit_Price__c * Max_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AEM Solution Net Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>