objects/Solution_Migration__c/fields/AEM_Solution_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>AEM_Solution_Product_Name__c</fullName>
    <description>AEM Solution Product Name</description>
    <formula>AEM_Solution__r.Name</formula>
    <label>AEM Solution Product Name</label>
    <type>Text</type>
</CustomField>