objects/Solution_Migration__c/fields/Legacy_Discount__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Discount__c</fullName>
    <description>Legacy Discount</description>
    <formula>1 - ( Legacy_Net_Total__c /  Legacy_List_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>