objects/Solution_Migration__c/fields/Legacy_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Net_Total__c</fullName>
    <label>Legacy Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>