objects/Solution_Migration__c/fields/Max_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Max_Quantity__c</fullName>
    <description>Max Quantity</description>
    <label>Max Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>