objects/Solution_Migration__c/fields/Migration_Discount__c.field-meta.xml
<CustomField>
    <fullName>Migration_Discount__c</fullName>
    <label>Migration Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>