objects/Solution_Migration__c/fields/Migration_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Migration_Unit_Price__c</fullName>
    <label>Migration Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>