objects/Solution_Migration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Solution Migrations</relationshipLabel>
    <relationshipName>Solution_Migrations</relationshipName>
    <type>Lookup</type>
</CustomField>