objects/Solution_Migration__c/fields/Partner_Migration_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Migration_Discount__c</fullName>
    <formula>Contract__r.Partner_Migration_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Migration Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>