objects/Solution_Migration__c/fields/Partner_Migration_Discount_Displ__c.field-meta.xml
<CustomField>
    <fullName>Partner_Migration_Discount_Displ__c</fullName>
    <description>Partner Migration Discount used for Display Purpose</description>
    <formula>IF(Partner_Migration_Discount__c = 0, 0, Partner_Migration_Discount__c/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Migration Discount Displ</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>