objects/Solution_Migration__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <formula>IF(
ISPICKVAL(AEM_Solution__r.Product_Type__c, &apos;TaaS&apos;),
IF(CONTAINS(AEM_Solution__r.Name, &apos;Core&apos;), 1,
IF(CONTAINS(AEM_Solution__r.Name, &apos;Endpoint&apos;), 2,
IF(CONTAINS(AEM_Solution__r.Name, &apos;Risk&apos;), 3,
IF(CONTAINS(AEM_Solution__r.Name, &apos;Incident&apos;), 4, NULL)))),

IF(
ISPICKVAL(AEM_Solution__r.Product_Type__c, &apos;Subscription&apos;),
IF(CONTAINS(AEM_Solution__r.Name, &apos;Core&apos;), 5,
IF(CONTAINS(AEM_Solution__r.Name, &apos;Endpoint&apos;), 6,
IF(CONTAINS(AEM_Solution__r.Name, &apos;Risk&apos;), 7,
IF(CONTAINS(AEM_Solution__r.Name, &apos;Incident&apos;), 8, null)))),
NULL
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>