objects/Solution_Migration__c/fields/Uplift_Partner_Migration_Percent__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Partner_Migration_Percent__c</fullName>
    <formula>Uplift_Percent__c +  Partner_Migration_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Uplift + Partner Migration Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>