objects/Solution_Migration__c/fields/Uplift_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Uplift_Unit_Price__c</fullName>
    <label>Uplift Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>