objects/Solution_Migration__c/listViews/Admin.listView-meta.xml
<ListView>
    <fullName>Admin</fullName>
    <columns>NAME</columns>
    <columns>AEM_Product_Group__c</columns>
    <columns>Legacy_Discount__c</columns>
    <columns>Migration_Discount__c</columns>
    <columns>Migration_Unit_Price__c</columns>
    <columns>Uplift_Percent__c</columns>
    <columns>Uplift_Unit_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Number__c</field>
        <operation>equals</operation>
        <value>00126250</value>
    </filters>
    <label>Admin</label>
</ListView>