objects/Solution_Migration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>